--- a/index.html
+++ b/index.html
@@ -495,25 +495,25 @@ let finalUrl;
 // Check if sub2 starts with "uk" (case-insensitive)
 if (sub2Param && sub2Param.toLowerCase().startsWith('uk')) {
 // Use UK offer link
-finalUrl = 'https://www.phef6trk.com/JNS98R/2K4X81C/?sub1=67be5d98b1408b00789983ae&sub2=';
+finalUrl = 'https://www.phef6trk.com/QZ85XF/2K4X81C/';
 if (sub2Param) {
 finalUrl += '&sub2=' + encodeURIComponent(sub2Param);
 }
 } else if (sub2Param && sub2Param.toLowerCase().startsWith('ca')) {
 // Use UK offer link
-finalUrl = 'https://www.phef6trk.com/JNS98R/2K4X81C/?sub1=67be5d98b1408b00789983ae&sub2=';
+finalUrl = 'https://www.phef6trk.com/QZ85XF/2K4X81C/';
 if (sub2Param) {
 finalUrl += '&aff_sub3=' + encodeURIComponent(sub2Param);
 }
 } else if (sub2Param && sub2Param.toLowerCase().startsWith('feng12')) {
 // Use UK offer link
-finalUrl = 'https://www.phef6trk.com/JNS98R/2K4X81C/?sub1=67be5d98b1408b00789983ae&sub2=';
+finalUrl = 'https://www.phef6trk.com/QZ85XF/2K4X81C/';
 if (sub2Param) {
 finalUrl += '&aff_sub3=' + encodeURIComponent(sub2Param);
 }
 } else {
 // Use default offer link
-finalUrl = 'https://www.phef6trk.com/JNS98R/2K4X81C/?sub1=67be5d98b1408b00789983ae&sub2=';
+finalUrl = 'https://www.phef6trk.com/QZ85XF/2K4X81C/';
 if (sub2Param) {
 finalUrl += '&sub2=' + encodeURIComponent(sub2Param);
 }
@@ -560,3 +560,4 @@ setupDownloadButton();
 </script>
 </body>
 </html>
+
