--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>TesterUp - Werde bezahlt für das Testen von Spielen</title>
+<title>Empfohlen - Werde bezahlt für das Testen von Spielen</title>
 <style>
 * {
 margin: 0;
