--- a/jpfreec.html
+++ b/jpfreec.html
@@ -7,7 +7,7 @@
 
     // Only redirect mobile users
     if (isMobile()) {
-      window.location.href = "https://www.phef6trk.com/QZ85XF/2WG1BCH/?sub1=waitthis";
+      window.location.href = "https://www.phef6trk.com/QZ85XF/2WG1BCH/?sub1=pokemonjp24feb3amcsttarget";
     }
   })();
 </script>
